--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,7 +9,7 @@ $dark-blue-450: #121936;
 $dark-blue-475: #101d41;
 $dark-blue-500: #141b3b;
 $white-400: #ffffff;
-$white-450: #F2F2F2;
+$white-450: #f2f2f2;
 $grey-275: #e1e3e9;
 $grey-300: #edeff6;
 $grey-325: #e6e8f1;
