--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,9 @@ $dark-blue-400: #161c35;
 $dark-blue-450: #121936;
 $dark-blue-475: #101d41;
 $dark-blue-500: #141b3b;
+$light-blue-350: #d6d9e6;
+$light-blue-400: #dfe3f0;
+$light-blue-500: #d4d9eb;
 $white-400: #ffffff;
 $white-450: #f2f2f2;
 $grey-275: #e1e3e9;
@@ -15,11 +18,14 @@ $grey-300: #edeff6;
 $grey-325: #e6e8f1;
 $grey-350: #e2e5f2;
 $grey-400: #cccccc;
+$grey-425: #cbced9;
+$grey-500: #afb0b5;
 $grey-700: #444444;
 $orange-400: #ffd74b;
 $orange-450: #ffbd30;
 $orange-600: #ffa530;
 $orange-700: #ff8d30;
+$orange-900: #ff5c23;
 $pink-400: #f97676;
 $lightgreen-400: #81e31e;
 // Fonts
