--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/tooltip.scss";
 @import "blocks/status.scss";
 @import "blocks/level.scss";
+@import "blocks/marks.scss";
 @import "blocks/container.scss";
 @import "blocks/contacts.scss";
 @import "blocks/social.scss";
@@ -37,3 +38,11 @@
 @import "blocks/registration.scss";
 @import "blocks/location.scss";
 @import "blocks/footer.scss";
+@import "blocks/user-info.scss";
+@import "blocks/plans.scss";
+@import "blocks/plan.scss";
+@import "blocks/add-plan.scss";
+@import "blocks/step.scss";
+@import "blocks/input-number.scss";
+@import "blocks/calendar.scss";
+@import "blocks/route.scss";
