--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -12,6 +12,10 @@
 
   @media #{$desktop} {
     background-color: $dark-blue-400;
+
+    &--theme-blue {
+      background-color: $dark-blue-350;
+    }
   }
 }
 
@@ -122,7 +126,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 15;
 
   @media #{$desktop} {
     padding: 46px 0 11px;
