--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,7 +1,7 @@
 $spacer-mobile: 91px;
 $spacer-tablet: 159px;
 $spacer-desktop: 105px;
-$radius: 30px;
+$radius: 20px;
 
 .main {
   position: relative;
@@ -42,10 +42,23 @@ $radius: 30px;
 }
 
 .main__title-wrap {
-  padding: 36px 0 0;
-
   background-color: $dark-blue-400;
   border-radius: 0 0 $radius $radius;
+
+  @media #{$tablet} {
+    $radius: 60px;
+
+    padding: 57px 0 0;
+
+    background-color: $dark-blue-375;
+    border-radius: 0 0 $radius $radius;
+  }
+
+  @media #{$desktop} {
+    padding: 107px 0 0;
+
+    background-color: $dark-blue-350;
+  }
 }
 
 .main__title {
@@ -60,11 +73,31 @@ $radius: 30px;
     position: absolute;
     bottom: 0;
     left: 0;
-    transform: translateY(50%);
+
     width: 100%;
     height: 5px;
 
     background-color: $orange-700;
     border-radius: 4px;
+    transform: translateY(50%);
+  }
+
+  @media #{$tablet} {
+    margin: 0 0 0 35px;
+    padding: 0 0 64px;
+
+    &::before {
+      height: 7px;
+    }
+  }
+
+  @media #{$desktop} {
+    margin: 0 0 0 64px;
+    padding: 0 0 70px;
+    max-width: 70%;
+
+    &::before {
+      height: 8px;
+    }
   }
 }
