--- a/source/sass/blocks/transport.scss
+++ b/source/sass/blocks/transport.scss
@@ -3,20 +3,57 @@
   flex-wrap: wrap;
 }
 
+.transport--companion {
+  justify-content: center;
+  align-items: center;
+
+  .transport__item {
+    width: 24px;
+    height: 25px;
+    margin: 0 9px 0 0;
+
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
+
+.transport--form {
+  justify-content: center;
+
+  .transport__item {
+    width: 32px;
+    height: 32px;
+
+    background-color: $white-400;
+    border-radius: 50%;
+  }
+
+  .transport__svg {
+    width: 17px;
+    height: 16px;
+  }
+
+  @media #{$tablet} {
+    .transport__item {
+      width: 43px;
+      height: 43px;
+    }
+
+    .transport__svg {
+      width: 23px;
+      height: 22px;
+    }
+  }
+}
+
 .transport__item {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 24px;
-  height: 25px;
-  margin: 0 9px 0 0;
-
-  &:last-child {
-    margin: 0;
-  }
 
   &--active {
-    color: $dark-blue-475;
+    color: $dark-blue-300;
   }
 
   &--inactive {
