Правки по стайллинту

--- a/source/sass/blocks/calendar.scss
+++ b/source/sass/blocks/calendar.scss
@@ -53,7 +53,7 @@ $label-padding-desktop: 15px;
   }
 
   @media #{$desktop} {
-    width: 35x;
+    width: 35px;
     height: 35px;
     margin: 0;
   }
