--- a/source/sass/blocks/add-plan.scss
+++ b/source/sass/blocks/add-plan.scss
@@ -8,7 +8,7 @@ $radius: 30px;
   background-color: $light-blue-500;
   border-radius: $radius $radius 0 0;
 
-  &:before {
+  &::before {
     content: "";
     position: absolute;
     top: 0;
@@ -22,9 +22,9 @@ $radius: 30px;
   }
 
   @media #{$desktop} {
-    $radius: 60px;
-
     border-radius: $radius $radius 0 0;
+
+    $radius: 60px;
   }
 }
 
