--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,3 +46,5 @@
 @import "blocks/input-number.scss";
 @import "blocks/calendar.scss";
 @import "blocks/route.scss";
+@import "blocks/select-country.scss";
+@import "blocks/recreation.scss";
