--- a/source/sass/blocks/step.scss
+++ b/source/sass/blocks/step.scss
@@ -2,20 +2,29 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  padding: 24px 25px 23px;
+  align-items: flex-start;
+  padding: 22px 25px 23px;
 
   background-color: $white-400;
   border: none;
   border-radius: 10px;
 
+  &--special-padding {
+    padding: 22px 25px 6px;
+  }
+
   @media #{$tablet} {
     padding: 45px 40px 56px;
 
     border-radius: 30px;
+
+    &--special-padding {
+      padding: 45px 43px 54px;
+    }
   }
 
-  @media #{$tablet} {
-    padding: 98px 160px 106px;
+  @media #{$desktop} {
+    padding: 98px 160px 105px;
 
     border-radius: 60px;
   }
@@ -23,6 +32,7 @@
 
 .step__header {
   display: grid;
+  width: 100%;
 
   @media #{$desktop} {
     margin: 0 0 30px;
@@ -34,6 +44,14 @@
 
     grid-template-columns: 2fr 1fr;
     row-gap: 33px;
+
+    &--no-margin {
+      margin: 0;
+    }
+
+    &--special-margin {
+      margin: 0 0 72px;
+    }
   }
 }
 
@@ -70,6 +88,10 @@
   line-height: 22px;
   color: $grey-700;
 
+  br {
+    display: none;
+  }
+
   @media #{$tablet} {
     margin: 0 0 23px;
     padding: 0 30px 39px 0;
@@ -78,6 +100,22 @@
     line-height: 24px;
 
     border-bottom: 1px solid $grey-275;
+
+    &--no-margin {
+      margin: 0;
+    }
+
+    &--special-padding {
+      padding: 0 0 33px 0;
+    }
+
+    &--special-margin {
+      margin: 0 0 27px;
+    }
+
+    br {
+      display: block;
+    }
   }
 
   @media #{$desktop} {
@@ -104,6 +142,8 @@
 }
 
 .step__parameters {
+  width: 100%;
+
   @media #{$tablet} {
     display: grid;
     margin: 0 0 60px;
@@ -111,11 +151,12 @@
 
   @media #{$desktop} {
     display: grid;
-    margin: 0 0 32px;
+    margin: 0 0 34px;
+
+    column-gap: 50px;
 
     grid-template-columns: 1fr 1fr;
     row-gap: 14px;
-    column-gap: 50px;
   }
 }
 
@@ -181,9 +222,10 @@
   @media #{$desktop} {
     margin: 0;
     padding: 0;
-    justify-self: flex-end;
 
     border: none;
+
+    justify-self: flex-end;
   }
 }
 
@@ -197,18 +239,40 @@
 }
 
 .step__calendar {
-  margin: 0 0 22px;
+  width: 100%;
+  margin: 0 0 24px;
 
   @media #{$tablet} {
     margin: 0 0 47px;
   }
 
   @media #{$desktop} {
-    margin: 0 0 59px;
+    margin: 0 0 56px;
+  }
+}
+
+.step__buttons-wrap {
+  width: 100%;
+
+  @media #{$tablet} {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
 .step__button {
+  color: $dark-blue-300;
+
+  &--margin {
+    margin: 0 0 6px;
+  }
+
+  &--stretched {
+    width: calc(100% + 10px);
+    margin: 0 -5px 6px;
+  }
+
   @media #{$tablet} {
     justify-content: space-between;
     width: 52.5%;
@@ -232,9 +296,95 @@
       border-bottom: 6px solid transparent;
       border-left: 12px solid $dark-blue-300;
     }
+
+    &--margin {
+      margin: 0;
+    }
+
+    &--back {
+      width: 192px;
+      flex-direction: row-reverse;
+      padding: 20px 0 20px 10px;
+
+      &::after {
+        transform: rotate(180deg);
+      }
+    }
+
+    &--special-width {
+      width: 53.5%;
+    }
   }
 
   @media #{$desktop} {
     width: 286px;
+
+    &--back {
+      width: 192px;
+    }
+  }
+}
+
+.step__route-wrap {
+  width: 100%;
+  margin: 0 0 25px;
+
+  $right-padding-tablet: 138px;
+  $right-padding-desktop: 226px;
+
+  @media #{$tablet} {
+    position: relative;
+
+    margin: 0 0 9px;
+    padding: 42px $right-padding-tablet 42px 0;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 1px;
+      right: $right-padding-tablet - 1px;
+    }
+
+    &::before {
+      top: 0;
+      background-color: $grey-275;
+    }
+
+    &::after {
+      height: 70px;
+      background-image: linear-gradient(to top, $white-400, transparent 70%);
+    }
+  }
+
+  @media #{$desktop} {
+    padding: 60px $right-padding-desktop 51px 0;
+
+    &::before,
+    &::after {
+      right: $right-padding-desktop - 1px;
+    }
+
+    &::before {
+      bottom: -100px;
+    }
+
+    &::after {
+      display: none;
+    }
+  }
+}
+
+.step__recreation {
+  width: 100%;
+  margin: 0 0 23px;
+
+  @media #{$tablet} {
+    margin: 0 0 49px;
+  }
+
+  @media #{$tablet} {
+    margin: 0 0 56px;
   }
 }
